Fix input padding alignment (#5389)
* Fix input padding alignment

* Let search box inherit input colors

* Move input spacing variables to spacing settings

--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -117,8 +117,11 @@ $sp-after: (
 // commonly occuring calculations available as variables
 $spv-nudge: map-get($nudges, p) !default; // top: nudge; bottom: unit - nudge; result: height = exact multiple of base unit
 $spv-nudge-compensation: $sp-unit - $spv-nudge !default;
+
+// form input spacing variables
 $input-margin-bottom: $sp-unit * 4 - $spv-nudge * 2;
-$input-vertical-padding: calc($spv-nudge - 1px);
+$input-border-thickness: 1.5px;
+$input-vertical-padding: calc($spv-nudge - $input-border-thickness);
 
 // tick element variables
 $form-tick-box-size: 1rem;
